Add column last_modified to lists table
